--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Express React Webpack Babel Setup</title>
+    <title>Plattentests Rezis 4</title>
   </head>
   <body>
     <div id="app"></div>
-    <script src="./bundle.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
