--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Plattentests Rezis 4</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div id="app"></div>
